{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 25,
  "lineage": "bdc4b030-ced2-b4ba-05f8-1dfed243f2f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tapash-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:internet-gateway/igw-065b87683bc6fb857",
            "id": "igw-065b87683bc6fb857",
            "owner_id": "509399262169",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-igw"
            },
            "tags_all": {
              "Name": "tapash-igw"
            },
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tapash-private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:route-table/rtb-0259cfcaf77991646",
            "id": "rtb-0259cfcaf77991646",
            "owner_id": "509399262169",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "tapash-private-route-table-1"
            },
            "tags_all": {
              "Name": "tapash-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "rtb-0259cfcaf77991646",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tapash-private-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:route-table/rtb-08849ee2d274755b4",
            "id": "rtb-08849ee2d274755b4",
            "owner_id": "509399262169",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "tapash-private-route-table-2"
            },
            "tags_all": {
              "Name": "tapash-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "rtb-08849ee2d274755b4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tapash-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:route-table/rtb-0aed262f8953279da",
            "id": "rtb-0aed262f8953279da",
            "owner_id": "509399262169",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065b87683bc6fb857",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tapash-public-route-table"
            },
            "tags_all": {
              "Name": "tapash-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "rtb-0aed262f8953279da",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.tapash-igw",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tapash-private-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce01b67b07a54179",
            "region": "ap-south-1",
            "route_table_id": "rtb-0259cfcaf77991646",
            "subnet_id": "subnet-00a4e6dde8df0fbb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tapash-private-route-table-1",
            "aws_subnet.tapash-private-subnet-1",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tapash-private-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031d5dde705130879",
            "region": "ap-south-1",
            "route_table_id": "rtb-08849ee2d274755b4",
            "subnet_id": "subnet-0f75851ef32e42033"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tapash-private-route-table-2",
            "aws_subnet.tapash-private-subnet-2",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tapash-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e04ab556ba02a660",
            "region": "ap-south-1",
            "route_table_id": "rtb-0aed262f8953279da",
            "subnet_id": "subnet-0911a8f70fd202f0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tapash-igw",
            "aws_route_table.tapash-public-route-table",
            "aws_subnet.tapash-public-subnet-1",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-00a4e6dde8df0fbb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a4e6dde8df0fbb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-private-subnet-1"
            },
            "tags_all": {
              "Name": "tapash-private-subnet-1"
            },
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "subnet-00a4e6dde8df0fbb0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-0f75851ef32e42033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75851ef32e42033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-private-subnet-2"
            },
            "tags_all": {
              "Name": "tapash-private-subnet-2"
            },
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "subnet-0f75851ef32e42033",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-0911a8f70fd202f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911a8f70fd202f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-public-subnet-1"
            },
            "tags_all": {
              "Name": "tapash-public-subnet-1"
            },
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "subnet-0911a8f70fd202f0c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-0329d1caf1ae9b672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0329d1caf1ae9b672",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-public-subnet-2"
            },
            "tags_all": {
              "Name": "tapash-public-subnet-2"
            },
            "vpc_id": "vpc-0b902cf38a0b0bbe5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "subnet-0329d1caf1ae9b672",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tapash-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:vpc/vpc-0b902cf38a0b0bbe5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070d9f3ef9bbd5469",
            "default_route_table_id": "rtb-0378dd25b0a511dd3",
            "default_security_group_id": "sg-0ceaf592ad541a060",
            "dhcp_options_id": "dopt-0abd23fa19b158402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b902cf38a0b0bbe5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0378dd25b0a511dd3",
            "owner_id": "509399262169",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-vpc-1234567890"
            },
            "tags_all": {
              "Name": "tapash-vpc-1234567890"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "509399262169",
            "id": "vpc-0b902cf38a0b0bbe5",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}